[gd_scene load_steps=15 format=3 uid="uid://btrr0ig6fq4hx"]

[ext_resource type="Script" path="res://代码/物理史莱姆.gd" id="1_7q7ll"]
[ext_resource type="Texture2D" uid="uid://cidapv1hna2km" path="res://资源/sprites/slime_green.png" id="1_r1c2k"]
[ext_resource type="Script" path="res://代码/state_machine.gd" id="4_coutl"]
[ext_resource type="AudioStream" uid="uid://c5yvw3763m6wc" path="res://资源/sounds/jump.wav" id="4_x7mv8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qhxit"]
atlas = ExtResource("1_r1c2k")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hoph"]
atlas = ExtResource("1_r1c2k")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5khp"]
atlas = ExtResource("1_r1c2k")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2x1y"]
atlas = ExtResource("1_r1c2k")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_xxi7s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhxit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hoph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5khp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2x1y")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_321kj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_7oql1"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -12), Vector2(-15, -12), Vector2(0, -12)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"attack_player"
}, {
"args": [],
"method": &"animation_end"
}]
}

[sub_resource type="Animation" id="Animation_qtote"]
resource_name = "dead"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w7pso"]
_data = {
"RESET": SubResource("Animation_321kj"),
"attack": SubResource("Animation_7oql1"),
"dead": SubResource("Animation_qtote")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ryi23"]
size = Vector2(12, 12)

[node name="史莱姆" type="CharacterBody2D"]
scale = Vector2(5, 5)
script = ExtResource("1_7q7ll")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_xxi7s")
autoplay = "default"
frame_progress = 0.165884
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
"": SubResource("AnimationLibrary_w7pso")
}
speed_scale = 4.0

[node name="死亡音效" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_x7mv8")
volume_db = -10.0

[node name="Area2D" type="Area2D" parent="."]

[node name="史莱姆体积" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_ryi23")

[node name="史莱姆体积" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_ryi23")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("4_coutl")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 400.0
offset_bottom = 400.0

[node name="atk_bar" type="ProgressBar" parent="Control"]
layout_mode = 0
offset_left = -14.0
offset_top = 8.0
offset_right = 14.0
offset_bottom = 12.0
show_percentage = false

[node name="hp_bar" type="ProgressBar" parent="Control"]
layout_mode = 0
offset_left = -14.0
offset_top = 1.2
offset_right = 14.0
offset_bottom = 7.2
value = 100.0
show_percentage = false

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
